# cafe-league-manager

./: pyproject.toml  schemas.sql
domains/: elo.py  event.py  match.py  match_player.py  player.py
tests/: test_event.py  test_match.py  test_player.py
